--- a/retosEvaluables/reactAppBook/src/index.css
+++ b/retosEvaluables/reactAppBook/src/index.css
@@ -2,3 +2,7 @@
 @import "tailwindcss";
 
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@theme {
+  /* aqui las personalizaciones */
+}
